--- a/frontend/simple-blog/package.json
+++ b/frontend/simple-blog/package.json
@@ -1,6 +1,11 @@
 {
   "name": "simple-blog",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "author": {
+    "name": "Ivan Došlić",
+    "email": "doslicivan03@gmail.com",
+    "url": "https://github.com/ivandoslic"
+  },
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,7 +18,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "pinia": "^2.2.0",
+    "vue": "^3.4.29",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -23,10 +30,13 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
+    "postcss": "^8.4.40",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.7",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vue-tsc": "^2.0.21"
